--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,10 @@
     grid-template-rows: 60px 1fr;
     grid-template-columns: 2fr 10fr;
 }
+.app-wrapper-content{
+    grid-area: content;
+    background-color: lightblue ;
+}
 
 
 
