--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -1,12 +1,15 @@
 .nav {
     grid-area: nav;
     background-color: burlywood;
+    padding: 30px;
+
 }
 
-.item {
+.item a {
     color: white;
+    text-decoration: none;
 }
 
-.item.active {
+.item a.active {
     color: gold;
 }
