made Dialogs css and some div

--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -1,1 +1,22 @@
 
+.dialogs{
+    display: grid;
+    grid-template-columns: 1fr 6fr;
+
+
+}
+.dialogItems{
+padding: 10px;
+}
+.dialog{
+
+}
+.active{
+    color:gold;
+}
+.messages{
+    padding: 10px;
+}
+.message{
+
+}
