made some components DialogItem and ProfileItem

--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -9,9 +9,11 @@
 padding: 10px;
 }
 .dialog{
-
 }
-.active{
+.dialog a {
+    text-decoration: none;
+}
+.dialog a.active{
     color:gold;
 }
 .messages{
