--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -1,7 +1,13 @@
 
-
-.userFoto{
+.userFoto {
     width: 50px;
     height: 50px;
     border-radius: 30px;
+}
+
+.selectedPage {
+    color: red;
+    font-weight: bold;
+    font-size: larger;
+
 }
