--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -9,5 +9,8 @@
     color: red;
     font-weight: bold;
     font-size: larger;
-
+    cursor: pointer;
+}
+.notSelectedPage{
+    cursor: pointer;
 }
