made preloader for find Users

--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -10,7 +10,9 @@
     font-weight: bold;
     font-size: larger;
     cursor: pointer;
+    padding: 5px;
 }
 .notSelectedPage{
     cursor: pointer;
+    padding: 5px;
 }
