--- a/src/components/profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/profile/ProfileInfo/ProfileInfo.module.css
@@ -8,3 +8,6 @@
     height: 50px;
     /*background: url(https://images.unsplash.com/photo-1574217013471-c32c6846cef7?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8Zm90b3xlbnwwfHwwfHw%3D&w=1000&q=80) no-repeat 0 50%;*/
 }
+.mainPhoto{
+    max-width: 200px;
+}
